# fastApiProject

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: cleanup-workflow-runs.yml
deploy/: deploy_script.sh.tpl  main.tf
sql_app/: crud.py  models.py  schemas.py
static/: main.js
static/css/: style.css
static/scripts/: api.js  jquery.googlemap.js  main.js
templates/: index.html  layout.html  map.html
