[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastApiProject"
version = "0.1.0"
description = "FastAPI-based project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Kevin Shindel", email = "kevin.shindel@yahoo.com" }
]
license = { text = "MIT" }
# classifiers are optional; adjust as needed
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
    "anyio==3.5.0",
    "asgiref==3.5.0",
    "click==8.1.2",
    "fastapi==0.75.1",
    "greenlet==1.1.2",
    "h11==0.16.0",
    "httptools==0.4.0",
    "idna==3.15",
    "Jinja2==3.1.6",
    "MarkupSafe==2.1.1",
    "pydantic==1.10.13",
    "python-dotenv==0.20.0",
    "PyYAML==6.0",
    "sniffio==1.2.0",
    "SQLAlchemy==1.4.36",
    "starlette==1.3.1",
    "typing-extensions==4.1.1",
    "uvicorn==0.17.6",
    "uvloop==0.16.0",
    "watchgod==0.8.2",
    "websockets==10.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sql_app*"]